--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: vrsalud-db # Debe coincidir con el nombre de la base de datos de arriba
-          property: internalConnectionString
+          property: connectionString
       - key: SECRET_KEY
         generateValue: true # Render generará una clave secreta segura automáticamente
       - key: WEB_CONCURRENCY
